Fix PR target/71652

PR target/71652
	* config/i386/i386.c (ix86_option_override_internal): Change
	signature and return false when there's an error related to
	arch string.
	(release_options_strings): New function.
	(ix86_valid_target_attribute_tree): Call the function.
	* gcc.target/i386/pr71652.c: New test.
	* gcc.target/i386/pr71652-2.c: New test.
	* gcc.target/i386/pr71652-3.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@240392 138bc75d-0d04-0410-961f-82ee72b054a4